# opengl_modern

./: '  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  2  CMakeLists.txt  CMakePresets.json  README.md  a.out  pbrnotes.md  tasks.py  test.cpp  test.py  vcpkg.json
cmake/: vcpkg.cmake
dep/imgui_file/: ImGuiFileDialog.cpp
resources/shaders/: batch.fs.glsl  batch.vs.glsl  color.fs.glsl  color.vs.glsl  depth.fs.glsl  depth.vs.glsl  depthquad.fs.glsl  depthquad.vs.glsl  gbuffer.fs.glsl  gbuffer.vs.glsl  point_depth.fs.glsl  point_depth.vs.glsl
src/: Bar.cpp  main.cpp  test.cpp  test.hpp
src/engine/: Bar.cpp  Bar.h  CMakeLists.txt  application.cpp  application.h  back.txt  e_assert.cpp  e_assert.h  engine.cpp  engine.h  graphics_manager.cpp  graphics_manager.h  input.cpp  input.h  pch.h  scene.cpp  scene.h  timestep.h  window.cpp  window.h  window_manager.cpp  window_manager.h
src/engine/application/: application.cpp  application.h  engine.cpp  engine.h  event.h  input.cpp  input.h  key_codes.h  mouse_codes.h  window.cpp  window.h
src/engine/camera/: camera.cpp  camera.h  fps_camera.cpp  fps_camera.h
src/engine/core/: base.h  e_assert.cpp  e_assert.h  stb_image_impl.h
src/engine/ecs/component/: camera.cpp  camera.h  core_components.h  renderer_components.h  transform.cpp  transform.h
src/engine/ecs/entity/: entity.cpp  entity.h
src/engine/ecs/system/: camera_system.cpp  camera_system.h  graphics_system.cpp  graphics_system.h  imgui_manager.cpp  imgui_manager.h  imgui_system.cpp  imgui_system.h  isystem.h  system.h  window_system.cpp  window_system.h
src/engine/main/: main.cpp  scene_main.h
src/engine/renderer/: data_types.h  light.h  linear_buffer_allocator.h  material.h  renderer.cpp  renderer.h  renderer_types.h
src/engine/renderer/gl/: buffer.cpp  buffer.h  data_types.h  debug.cpp  debug.h  shader.cpp  shader.h  texture_2d.cpp  texture_2d.h  texture_cube.h  vertex_array.cpp  vertex_array.h
src/engine/renderer/resource/: material_manager.cpp  material_manager.h  mesh_manager.cpp  mesh_manager.h  paths.h  shader_manager.cpp  shader_manager.h
src/engine/renderer/resource/shapes/: shapes.h
src/engine/resource/: data_types.h  material_manager.cpp  material_manager.h  mesh_manager.cpp  mesh_manager.h  model_loader.cpp  model_loader.h  model_manager.cpp  model_manager.h  paths.h  resource.h  resource_manager.cpp  resource_manager.h  resource_types.h  shader_manager.cpp  shader_manager.h  shape_loader.cpp  shape_loader.h
src/engine/resource/shapes/: shapes.h
src/engine/test/: components.h  main.cpp  scene_2.cpp  scene_2.h  scene_deferred.cpp  scene_deferred.h  scene_main.cpp  scene_main.h  standard_demo_scene.h  systems.cpp  systems.h
src/engine/util/: hashed_string.h  imgui_extensions.cpp  imgui_extensions.h  load_file.cpp  load_file.h  profiler.h  timer.cpp  timer.h
src/test/: bar.cpp  bar.hpp
test/: CMakeLists.txt  scene_2.h  scene_main.cpp  scene_main.h  systems.cpp  systems.h
test/src/: camera_system.h  demo.cpp  demo.h  main.cpp  scene_2.cpp  scene_2.h  scene_main.cpp  scene_main.h  systems.cpp  systems.h
